[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fdenser-sca"
version = "0.0.1"
dependencies = [
  "keras",
  "numpy",
  "scikit-learn",
  "tensorflow",
  "Pillow",
  "jsmin",
]
requires-python = ">=3.8"
authors = [
  {name = "Mattia Napoli"},
]
maintainers = [
  {name = "Mattia Napoli"},
]
description = "FastDenser++ adaptation to Side Channel Analysis"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/MattiaDev/fdenser-sca.git"
